--- a/README.md.tmpl
+++ b/README.md.tmpl
@@ -221,10 +221,19 @@
         + terraform get -update=true
         + bash -i -l
 
-
   You can even get Terraformsh to explicitly ask you for confirmation before
   moving to the next command with the `approve` command (since the default is
   to pass `-input=false` to each command for easier use in automation).
+
+  Are you working in a hierarchy of config files, and want to grep all
+  the parent directories? Use the built-in `revgrep` command:
+
+        $ terraformsh revgrep -H -e "gcp_project_id"
+        terraformsh: Info: Found terraform command 'revgrep'
+        terraformsh: Warning: '-H' is not a valid command; passing as an option instead
+        terraformsh: Warning: 'project_id' is not a valid command; passing as an option instead
+        + cd "/home/vagrant/my-repo/env/product/dev/nonprod/us-west1/tf-state/bootstrap"
+        /home/vagrant/git/my-repo/env/product/dev/nonprod/terraform.sh.tfvars:gcloud_project_id = "123456789"
 
 
 ### More Examples
