--- a/README.md.tmpl
+++ b/README.md.tmpl
@@ -269,6 +269,10 @@
         $ echo 'database_name = "some database"' > terraform.sh.tfvars
         $ terraformsh plan
 
+ - You've applied some Terraform using local state, and now you want to migrate it to a remote backend. After you add your new backend tf code, you'd run:
+
+        $ terraformsh -E "INIT_ARGS=()" init -force-copy -migrate-state plan apply
+
 
 ### Having trouble?
 
