--- a/README.md.tmpl
+++ b/README.md.tmpl
@@ -65,6 +65,13 @@
   with a naming convention like `tfsh.92h39d9hd9.plan`. You can override this by
   setting environment or configuration variable *TF_PLANFILE* and *TF_DESTROY_PLANFILE*.
 
+  Should you need to check what the value of *TF_PLANFILE* will be (for example to
+  grab the plan file after running terraformsh), this command will print the value:
+  ```
+  $ ./terraformsh -q env sh -c 'echo $TF_PLANFILE'
+  /Users/pwillis/git/GITHUB.COM/PWILLIS-ELS/terraformsh/tf.996d6c1308.plan
+  ```
+
 
 ### Multiple commands as arguments
 
@@ -169,6 +176,7 @@
     NO_DEP_CMDS=1               # Don't run dependent commands automatically
     NO_CLEANUP_TMP=1            # Don't clean up temporary TF_DATA_DIR
     DRYRUN=1                    # Enable dry-run mode
+    QUIET_MODE=1                # Enable quiet mode
     CD_DIR=             # The directory to change to before running terraform commands
 
   The environment variable `TF_DATA_DIR` is automatically overridden by Terraformsh.
@@ -212,6 +220,14 @@
 
 
   An example file: [.terraformshrc-example](.terraformshrc-example)
+
+  **NOTE:** You can use Terraformsh's `env` command to print out the values
+  of internal Terraform variables as they exist at run time, e.g.:
+  ```
+  terraformsh env
+  ```
+  You can also pass arguments after this, that will be passed to your system's
+  `env` command.
 
 
 ### Interactive troubleshooting
